# backend/app/api/v1/auth.go
@@ -30,3 +30,25 @@ func (b *BaseApi) Login(ctx *gin.Context) {
 	}
 	helper.SuccessWithData(ctx, tokens)
 }
+
+// @Tags auth
+// @Summary User logout
+// @Description
+// @Accept json
+// @Success 200 {object} dto.Response
+// @Router /auth/logout [post]
+func (b *BaseApi) Logout(ctx *gin.Context) {
+	token := ctx.GetHeader(constant.TokenKey)
+	if token == "" {
+		helper.ErrResponse(ctx, constant.CodeErrBadRequest)
+		return
+	}
+
+	err := authLogic.Logout(ctx, token)
+	if err != nil {
+		helper.ErrResponse(ctx, constant.CodeErrInternalServer)
+		return
+	}
+
+	helper.SuccessWithOutData(ctx)
+}
