# cmd/server/docs/swagger.json
@@ -44,6 +44,25 @@
                 }
             }
         },
+        "/auth/logout": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User logout",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/kf": {
             "get": {
                 "description": "Retrieve a list of all kf",
@@ -942,6 +961,9 @@
         "request.KF": {
             "type": "object",
             "properties": {
+                "bot_prompt": {
+                    "type": "string"
+                },
                 "bot_timeout": {
                     "type": "integer"
                 },
@@ -1016,9 +1038,6 @@
         "request.ReceptionistOptions": {
             "type": "object",
             "properties": {
-                "open_kfid": {
-                    "type": "string"
-                },
                 "userid_list": {
                     "type": "array",
                     "items": {
